--- a/Resources.qrc
+++ b/Resources.qrc
@@ -13,6 +13,19 @@
     </qresource>
     <qresource prefix="/Nivel2">
         <file>Edificio.png</file>
-        <file>KingHomer-Sprites.png</file>
+        <file>Bomb.png</file>
+        <file>Explode.png</file>
+        <file>Homer_Celebration1.png</file>
+        <file>Homer_Celebration2.png</file>
+        <file>Homer_Dead.png</file>
+        <file>Homer_Fall.png</file>
+        <file>Homer_Up1.png</file>
+        <file>Homer_Up2.png</file>
+        <file>Marge_Happy1.png</file>
+        <file>Marge_Happy2.png</file>
+        <file>Marge_Scared1.png</file>
+        <file>Marge_Scared2.png</file>
+        <file>Parachute.png</file>
+        <file>Plane.png</file>
     </qresource>
 </RCC>
