--- a/Resources.qrc
+++ b/Resources.qrc
@@ -16,6 +16,8 @@
         <file>Bat-1.png</file>
         <file>Bat-2.png</file>
         <file>Bat-3.png</file>
+        <file>Disparo.png</file>
+        <file>BartArma_Lado.png</file>
     </qresource>
     <qresource prefix="/Nivel2">
         <file>Edificio.png</file>
