--- a/Resources.qrc
+++ b/Resources.qrc
@@ -18,7 +18,7 @@
         <file>Bat-2.png</file>
         <file>Bat-3.png</file>
         <file>Disparo.png</file>
-        <file>BartArma_Lado.png</file>
+        <file>BartArma2.png</file>
     </qresource>
     <qresource prefix="/Nivel2">
         <file>Edificio.png</file>
