--- a/Resources.qrc
+++ b/Resources.qrc
@@ -19,6 +19,7 @@
         <file>Bat-3.png</file>
         <file>Disparo.png</file>
         <file>BartArma2.png</file>
+        <file>Tumbas.png</file>
     </qresource>
     <qresource prefix="/Nivel2">
         <file>Edificio.png</file>
