--- a/Resources.qrc
+++ b/Resources.qrc
@@ -41,6 +41,8 @@
     <qresource prefix="/Nivel1">
         <file>BloquesNivel1.png</file>
         <file>FondoNivel1.png</file>
-        <file>Homero.png</file>
+        <file>HomeroCelebrate.png</file>
+        <file>HomeroJump.png</file>
+        <file>HomeroWalk.png</file>
     </qresource>
 </RCC>
