--- a/Resources.qrc
+++ b/Resources.qrc
@@ -20,6 +20,7 @@
         <file>Tumbas.png</file>
         <file>fondoNivel3.png</file>
         <file>Vida.png</file>
+        <file>Zombie.png</file>
     </qresource>
     <qresource prefix="/Nivel2">
         <file>Edificio.png</file>
