--- a/Resources.qrc
+++ b/Resources.qrc
@@ -42,6 +42,6 @@
         <file>HomeroCelebrate.png</file>
         <file>HomeroJump.png</file>
         <file>HomeroWalk.png</file>
-        <file>fondoBloques.png</file>
+        <file>PlataformasNivel.png</file>
     </qresource>
 </RCC>
