--- a/Resources.qrc
+++ b/Resources.qrc
@@ -45,5 +45,6 @@
         <file>HomeroJump.png</file>
         <file>HomeroWalk.png</file>
         <file>PlataformasNivel.png</file>
+        <file>FondoNivel1.png</file>
     </qresource>
 </RCC>
