--- a/Resources.qrc
+++ b/Resources.qrc
@@ -46,5 +46,6 @@
         <file>HomeroWalk.png</file>
         <file>PlataformasNivel.png</file>
         <file>FondoNivel1.png</file>
+        <file>Krusty.png</file>
     </qresource>
 </RCC>
